[package]
name = "boilercontrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
pid = "4.0.0"
esphome-client = { path = "/Users/dga/esphome/esphome-client" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["time", "fs", "sync"] }
tokio-modbus = "0.9.0"
tokio-serial = "5.4.4"
